<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvResetPassword"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_thin"
        android:text="@string/reset_password"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="0dp"
        android:id="@+id/tvResetLink"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/password_reset_link"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tvResetPassword"
        app:layout_constraintTop_toBottomOf="@id/tvResetPassword"/>

    <EditText
        android:layout_width="0dp"
        android:id="@+id/editTextResetPassword"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toBottomOf="@id/tvResetLink"
        app:layout_constraintEnd_toEndOf="@id/tvResetLink"
        app:layout_constraintStart_toStartOf="@id/tvResetLink"
        style="@style/editTextPasswordReset" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/editTextResetPassword"
        app:layout_constraintEnd_toEndOf="@id/editTextResetPassword"
        app:layout_constraintTop_toBottomOf="@id/editTextResetPassword"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/cancel"
            android:layout_weight="1"
            style="@style/whiteButtonStyle"
            android:textAllCaps="false"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/send"
            android:textColor="@color/white"
            android:layout_weight="1"
            style="@style/blueButtonStyle"
            android:textAllCaps="false"/>

    </LinearLayout>







</androidx.constraintlayout.widget.ConstraintLayout>