<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/texture_left"
        app:layout_constraintBottom_toBottomOf="@id/guidelineLeftTexture"
        app:layout_constraintDimensionRatio="1:3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeftTexture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEllipseLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.22" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEllipseRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEllipseTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.19" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEllipseBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.52" />

    <ImageView
        android:id="@+id/ellipse"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/guidelineEllipseLeft"
        app:layout_constraintEnd_toEndOf="@id/guidelineEllipseRight"
        app:layout_constraintTop_toTopOf="@id/guidelineEllipseTop"
        app:layout_constraintBottom_toBottomOf="@id/guidelineEllipseBottom"
        android:background="@drawable/ellips"
        app:layout_constraintDimensionRatio="1:1"/>

    <TextView
        android:id="@+id/tvTheBestChoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/h4"
        android:layout_marginTop="@dimen/tvRightAddressMargin"
        app:layout_constraintTop_toTopOf="@id/guidelineLeftTexture"
        app:layout_constraintStart_toStartOf="@id/ellipse"
        app:layout_constraintEnd_toEndOf="@id/ellipse"
        app:layout_constraintBottom_toBottomOf="@id/ellipse"
        android:text="@string/rightAddress"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/tvWeBringQuality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/h2"
        app:layout_constraintStart_toStartOf="@id/tvTheBestChoice"
        app:layout_constraintEnd_toEndOf="@id/tvTheBestChoice"
        app:layout_constraintTop_toBottomOf="@id/tvTheBestChoice"
        android:textAlignment="center"
        android:gravity="center"
        android:text="@string/quality"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/texture_right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/guidelineLeftTexture"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="@dimen/smallButtonWidth"
        android:id="@+id/buttonStart"
        android:layout_height="@dimen/smallButtonHeight"
        style="@style/blueButtonStyle"
        app:layout_constraintTop_toBottomOf="@id/tvWeBringQuality"
        app:layout_constraintStart_toStartOf="@id/tvWeBringQuality"
        app:layout_constraintEnd_toEndOf="@id/tvWeBringQuality"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/start"/>

</androidx.constraintlayout.widget.ConstraintLayout>